--- a/.github/workflows/try_build_latex.yml
+++ b/.github/workflows/try_build_latex.yml
@@ -17,7 +17,15 @@ jobs:
     steps:
       - name: Set up Git repository
         uses: actions/checkout@v4
+      
+      - name: Check if main.tex exists
+        id: main_check
+        uses: andstor/file-existence-action@v3
+        with:
+          files: "main.tex"
+        
       - name: Compile LaTeX document
+        if: steps.main_check.outputs.files_exists == 'true'
         uses: xu-cheng/latex-action@v4
         with:
           root_file: main.tex
